# uncertainty-modeling

./: .gitignore  README.md  pyproject.toml
data/: 00_enriched_data.csv
notebooks/: 00_conformal_prediction.ipynb  00_loan_approval.ipynb  01_monte_carlo_simulation.ipynb  01_proxy_income.ipynb  02_probability_calibration.ipynb  XX_monte_carlo_simulation.ipynb  calculations.py  modeling.py  q_regression_nn.py  utils.py  venn_abers.py
